[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/ai_diagram/editor/graphnode/gn_if_pcs.gd" type="Script" id=1]

[node name="gn_if_pcs" type="GraphNode"]
margin_right = 98.0
margin_bottom = 79.0
title = "IF Process"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 358.0
margin_bottom = 38.0
text = "Else"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 358.0
margin_bottom = 59.0

[node name="btn_min" type="Button" parent="HBoxContainer"]
margin_right = 17.0
margin_bottom = 20.0
text = "-"

[node name="btn_plus" type="Button" parent="HBoxContainer"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 20.0
text = "+"

[connection signal="close_request" from="." to="." method="_on_gn_if_pcs_close_request"]
[connection signal="button_up" from="HBoxContainer/btn_min" to="." method="_on_btn_min_button_up"]
[connection signal="button_up" from="HBoxContainer/btn_plus" to="." method="_on_btn_plus_button_up"]
